--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "try1",
-  "version": "0.1.0",
+  "version": "^0.1.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
@@ -14,7 +14,7 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "universal-cookie": "^4.0.4",
