--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-masonry": "^2.0.0",
     "react-masonry-component": "^6.3.0",
     "react-redux": "^8.0.2",
+    "react-responsive-masonry": "^2.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
